[FIX] html_editor, *: prevent overflow by handling long text globally
*: mail, website

This commit will prevent long words from breaking layouts and
introducing horizontal scrollbars across website pages.

Some languages naturally contain very long words, and users may also
input long unbroken or random text. This results in overflow issues that
negatively impact readability and overall UI quality.

Since pages do not share a consistent wrapper element, and key areas
like `header` and `footer` must also be handled, applying the fix at a
higher level is necessary. Pages such as `/blog`, `/forum` and `/slides`
further highlight this inconsistency in structure.

To ensure complete and uniform coverage, the rule is applied on
`#wrapwrap`, which contains `<header>`, `<main>` and `<footer>`
content.

task-5457179

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -256,6 +256,8 @@ body {
 }
 
 #wrapwrap {
+    overflow-wrap: anywhere;
+
     @if o-website-value('body-image') {
         @include body-image-bg-style();
     }
